--- a/styleandroid.css
+++ b/styleandroid.css
@@ -74,7 +74,7 @@ header >p{
     font-family: var(--font-padrao);
     max-width: 500px;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
     font-size:1.2em;
     padding-left: 10px;
     padding-right: 10px;
